--- a/src/public/locales/locale-ru.json
+++ b/src/public/locales/locale-ru.json
@@ -26,6 +26,7 @@
   "BUY_CONFIRM_MESSAGE": "Вы действительно хотите купить сертификат?",
   "CELL_CONFIRM_MESSAGE": "Вы действительно хотите продать сертификат?",
   "DELETE_CONFIRM_MESSAGE": "Вы действительно хотите удалить этот сертификат?",
+  "LEAVE_CONFIRM_MESSAGE": "Вы действительно хотите выйти?",
 
   "EDIT_CERTIFICATE": "Изменение сертификата",
   "ADD_CERTIFICATE": "Добавление сертификата",
