--- a/certificates/src/public/locales/locale-ru.json
+++ b/certificates/src/public/locales/locale-ru.json
@@ -29,6 +29,7 @@
   "CELL_CONFIRM_MESSAGE": "Вы действительно хотите продать сертификат?",
   "DELETE_CONFIRM_MESSAGE": "Вы действительно хотите удалить этот сертификат?",
   "LEAVE_CONFIRM_MESSAGE": "Вы действительно хотите выйти?",
+  "EMPTY_QUERY_MESSAGE": "По вашему запросу не было найдено ни одного сертификата!",
 
   "EDIT_CERTIFICATE": "Изменение сертификата",
   "ADD_CERTIFICATE": "Добавление сертификата",
